# automatic-broccoli

./: demo-data.csv  pyproject.toml  quix_sample_consumer.py  quix_sample_producer_from_csv.py  simple-bot.py
